src/test/deca/context/invalid/convFloatInt.deca
//ERROR :3:
{
    int a = 2.0;
}